--- a/lab5/lab5/lab5.csproj
+++ b/lab5/lab5/lab5.csproj
@@ -6,6 +6,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20190420050040_Init.cs" />
+    <Compile Remove="Migrations\20190420050226_AddEmployeAgeMigration.cs" />
+    <Compile Remove="Migrations\20190420051625_AddEmployeAgeMigration.cs" />
+    <Compile Remove="Migrations\20190420051815_AddEmployeAgeMigration.cs" />
+    <Compile Remove="Migrations\20190420053738_AddEmployeAgeMigration.cs" />
+    <Compile Remove="Migrations\20190420054038_InitMigration.cs" />
+    <Compile Remove="Migrations\20190420054140_AddEmployeAgeMigration.cs" />
+    <Compile Remove="Migrations\20190420063550_InitMigration.cs" />
+    <Compile Remove="Migrations\20190420063922_InitMigration.cs" />
+    <Compile Remove="Migrations\20190420064226_AddEmployeAgeMigration.cs" />
+    <Compile Remove="Migrations\20190420064353_AddEmployeAgeMigration.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
